ingress-microservice-app/ms2ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms2-app-ing
  namespace: mysql-server
  labels:
    app: database
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - hosts: phpmyadmin.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: phpmyadmin-svc
            port: 
              number: 80
